--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,7 @@
             ],
             "styles": [
               "src/styles.css",
+              "node_modules/highlight.js/styles/github.css",
               "src/bootstrap.css"
             ],
             "scripts": []
