Added highlightjs, modified <code> to look like in InteliJ, added hide/show answer

--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@ng-bootstrap/ng-bootstrap": "^5.1.5",
+    "core-js": "2.6.4",
+    "highlight.js": "latest",
+    "highlightjs-line-numbers.js": "^2.7.0",
     "ngx-highlightjs": "^4.0.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
