--- a/angular.json
+++ b/angular.json
@@ -24,9 +24,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "node_modules/highlight.js/styles/github.css",
-              "src/bootstrap.css"
+              "src/styles.css"
             ],
             "scripts": []
           },
