--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "highlight.js": "latest",
     "highlightjs-line-numbers.js": "^2.7.0",
     "ngx-highlightjs": "^4.0.2",
+    "ngx-markdown": "^9.0.0",
     "ngx-tui-editor": "^0.3.4",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
